2008-05-17  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	Bind to a private rating field and call Save in the property setter

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs:
	Add the rating column with the new hot rating cell

2008-05-17  Aaron Bockover  <abock@gnome.org>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/Column.cs: FIxed improper ctor
	chain; set Min/MaxWidth if a cell is ISizeRequestCell when packing
	by calling GetSize on the cell

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnCell.cs: Allow setting
	BoundObject on a cell, added a BoundObjectParent that can be used
	to track which data item (instead of which data property on an item)
	is being bound

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnCellCheckBox.cs: Implemented
	a check box interactive cell renderer that binds to boolean properties

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnCellRating.cs: Implemented
	a rating cell renderer based on the new rating renderer

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/IInteractiveCell.cs: Interface
	for cells that would like to have keyboard/mouse events proxied to them

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ISizeRequestCell.cs: Interface
	for cells that actually care about their size and refuse to adapt to
	what the view can provide

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Implemented first pass at cell level interaction - namely through 
	ProxyEventToCell which currently supports transforming and proxying
	Gdk.EventButton and Gdk.EventMotion events from the view to a cell; also
	fix a bunch of potential NRE when the model selection is null

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Model.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Fix a bunch of potential NRE when the model selection is null
