@@ -1,5 +1,10 @@
 2008-05-17  Aaron Bockover  <abock@gnome.org>
 
+	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/TrackEditor.cs: Added
+	Genre list population back to the track editor (BGO #533530)
+
+2008-05-17  Aaron Bockover  <abock@gnome.org>
+
 	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
 	Bind to a private rating field and call Save in the property setter
 
